--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "deck.gl": "^8.4.16",
     "google-map-react": "^2.1.9",
     "react": "^17.0.2",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
     "react-event-timeline": "^1.6.3",
+    "react-hide-on-scroll": "^1.1.3",
     "react-icons": "^4.2.0",
     "react-map-gl": "^6.1.14",
     "react-minimal-side-navigation": "^1.8.0",
