--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "deck.gl": "^8.4.16",
     "google-map-react": "^2.1.9",
+    "mapbox-gl": "^2.2.0",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
@@ -17,6 +18,7 @@
     "react-hide-on-scroll": "^1.1.3",
     "react-icons": "^4.2.0",
     "react-map-gl": "^6.1.14",
+    "react-mapbox-gl": "^5.1.1",
     "react-minimal-side-navigation": "^1.8.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -37,7 +39,9 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not ie 11",
+      "not chrome < 51",
+      "not safari < 10"
     ],
     "development": [
       "last 1 chrome version",
