--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "deck.gl": "^8.4.16",
     "google-map-react": "^2.1.9",
+    "leaflet": "^1.7.1",
     "mapbox-gl": "^2.2.0",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -17,8 +18,9 @@
     "react-event-timeline": "^1.6.3",
     "react-hide-on-scroll": "^1.1.3",
     "react-icons": "^4.2.0",
+    "react-leaflet": "^3.2.0",
     "react-map-gl": "^6.1.14",
-    "react-mapbox-gl": "^5.1.1",
+    "react-mapbox-gl": "^4.8.1",
     "react-minimal-side-navigation": "^1.8.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
@@ -37,11 +39,9 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
-      "not dead",
-      "not ie 11",
-      "not chrome < 51",
-      "not safari < 10"
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
     ],
     "development": [
       "last 1 chrome version",
