--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "deck.gl": "^8.4.16",
     "google-map-react": "^2.1.9",
     "leaflet": "^1.7.1",
+    "lodash.debounce": "^4.0.8",
     "mapbox-gl": "^2.2.0",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
@@ -22,6 +23,7 @@
     "react-map-gl": "^6.1.14",
     "react-mapbox-gl": "^4.8.1",
     "react-minimal-side-navigation": "^1.8.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
